Done the test suites for updateProject and getHumanReadableProject methods. Fixed some bug in ProjectService. Clean Up some stuff in the other service test